# wayward-vulkan-engine

./: .gitignore  cmake  compile_shaders.py  make
inc/: logger.h  tiny_gltf.h  vk_mem_alloc.h
lib/: tiny_gltf_impl.cc
src/: .app.cc.swp  .app.h.swp  .app_init.cc.swo  CMakeLists.txt  app.cc  app.h  app_init.cc  glm.h  main.cc  model_buffer.cc  model_buffer.h  resource_path.cc  resources.cc  shaders.cc  wvk_buffer.h  wvk_device.cc  wvk_device.h  wvk_helper.h  wvk_image.cc  wvk_image.h  wvk_model.cc  wvk_model.h  wvk_pipeline.cc  wvk_pipeline.h  wvk_renderpass.cc  wvk_renderpass.h  wvk_sampler.cc  wvk_sampler.h  wvk_shader.h  wvk_skeleton.cc  wvk_skeleton.h  wvk_swapchain.cc  wvk_swapchain.h  wvk_vertex_attributes.h  wvk_window.cc  wvk_window.h
src/anim/: accessor_parser.cc  skeleton.cc  skeleton.h
src/game/: CMakeLists.txt  controller.cc  controller.h  game_structs.h
src/old_files/: CMakeLists.txt  app.cc  app.h  app_init.cc  app_renderer.cc  app_renderer.h  attributes.h  main.cc  resources.h
src/resources/models/: astronaut.glb  rigged_cube.glb
src/resources/shaders/: empty.frag  empty.frag.spv  mesh.vert  mesh.vert.spv  rigged_mesh.vert  rigged_mesh.vert.spv  shadow.vert  shadow.vert.spv  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
src/wvk/: CMakeLists.txt  app.cc  app.h  main.cc  wvk_device.cc  wvk_device.h  wvk_window.cc  wvk_window.h
